2005-09-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTabbedPaneUI.java
	(calculateTabWidth): Don't use the calcRect here. This lead to an
	inconsistent state when this method is called from another method
	that also uses calcRect.
	(calculateTabHeight): Don't use the calcRect here. This lead to an
	inconsistent state when this method is called from another method
	that also uses calcRect.

2005-09-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTabbedPaneUI.java:
	Reformatted file.

2005-09-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/ObjectInputStream.java:
	(readObject()): Moved marker parsing to its own method.
	(parseContent(byte)): Fixed TC_OBJECT handling to loop on
	blockdata written manually by the class.
	
2005-09-14  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/classpath/jcl.c: Replaced undefined 	
	POINTERS_ARE_64BIT with SIZEOF_VOID_P == 8.

2005-09-14  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(PaletteCloseIcon): now implements UIResource.

2005-09-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ButtonModel.java: Added API docs all over.

2005-09-14  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTabbedPane.java: Added API comments to make clear
	that null values for tab titles are allowed.

2005-09-14  Roman Kennke  <kennke@aicas.com>

	Fixes Bug#23859.
	* javax/swing/JTabbedPane.java
	(insertTab): Check if title == null and if so, then set it
	to "". Otherwise the null string would cause a segfault or
	an assertion failure in font metrics calculation as reported
	in bug#23859.

2005-09-14  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/CORBA/ExceptionCreator.java: minor API doc fixes,
	* gnu/CORBA/Version.java: likewise.

2005-09-14  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicFormattedTextFieldUI.java:
	(getPropertyPrefix): added API docs,