@@ -1,3 +1,7 @@
+2005-09-13  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/Character.java: Typo fixes in javadoc.
+
 2005-09-14  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/plaf/basic/BasicTabbedPaneUI.java
